# music-app

./: .gitignore  Containerfile  README.md  build.sh  pyproject.toml  schema.sql
config/: settings.py
src/music_app/: enrichment.py  receiver.py
src/music_app/api/: app.py  deps.py  models.py
src/music_app/api/routers/: artists.py  maloja.py  review.py  scrobbles.py  stats.py  tracks.py
ui/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: artists.ts  client.ts  review.ts  scrobbles.ts  tracks.ts  types.ts
ui/src/components/common/: LoadingSpinner.tsx  Pagination.tsx
ui/src/components/layout/: Shell.tsx  Sidebar.tsx
ui/src/hooks/: useArtists.ts  useReview.ts  useTracks.ts
ui/src/pages/: ArtistDetail.tsx  Artists.tsx  Review.tsx  TrackDetail.tsx  Tracks.tsx
