[project]
name = "music-app"
version = "0.1.0"
description = "Music scrobble receiver - Maloja-compatible API that writes to PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "starlette>=0.45.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_app"]
