[project]
name = "music-app"
version = "0.1.0"
description = "Music scrobble receiver - Maloja-compatible API that writes to PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.34.0",
    "musicbrainzngs>=0.7.1",
    "httpx>=0.27.0",
    "pylast>=5.2.0",
    "rapidfuzz>=3.6.0",
    "tenacity>=8.2.0",
    "mutagen>=1.47.0",
    "asyncpg>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_app"]
